correct table border colors in dark mode

--- a/resources/sass/core/_dark_markdown.scss
+++ b/resources/sass/core/_dark_markdown.scss
@@ -20,6 +20,10 @@ body.theme-dark {
 
   table {
     color: #acacac;
+    th,
+    td {
+      border-color: #2f2f2f !important;
+    }
   }
 
   pre[class*="language-"] {
